editing usage comment

--- a/mixins/font-face.less
+++ b/mixins/font-face.less
@@ -1,6 +1,5 @@
-/* usage:
-.font-face('iconset', 'fonts');
-*/
+/* usage: .font-face('iconset', 'fonts'); */
+
 .font-face (@fontname, @fontpath) {
     @font-face {
         font-family: @fontname;
