added box-shadow, gradients and shapes

--- a/mixins/rounded-corners.less
+++ b/mixins/rounded-corners.less
@@ -1,3 +1,6 @@
+/*	 usage: .rounded-corners( {{radius}} ); 
+	{{radius}} in px (optional) - fallback to 5px
+*/
 
 .rounded-corners (@radius: 5px) {
 	-webkit-border-radius: @radius;
