--- a/mixins/animations/transition.less
+++ b/mixins/animations/transition.less
@@ -1,5 +1,4 @@
-/* usage: grayscale(1); */
-
+/* usage: .transition(1s, ease); */
 
 .transition (@property: all, @duration: .5s, @timing: linear, @delay: 0 ) {
 	-webkit-transition: @arguments;
@@ -7,9 +6,3 @@
 	-o-transition: @arguments;
 	transition: @arguments;
 }
-
-/* .box-shadow (@x: 2px, @y: 6px, @blur: 0px, @spread: 0px, @color: rgba(0,0,0,.5)) {
-	box-shadow: @arguments;
-	-moz-box-shadow: @arguments;
-	-webkit-box-shadow: @arguments;
-} */
