editing demo for gradients with new 3 color radial

--- a/demo/gradients/main.less
+++ b/demo/gradients/main.less
@@ -21,7 +21,7 @@ html, body {
 body {
 	font-family:'Open Sans', Arial, Helvetica, sans-serif;
 	font-size:100%;
-	color:#fff;
+	color:#000;
 	line-height:150%;
 }
 
@@ -55,7 +55,7 @@ div.linear {
 	height:100%;
 	width:50%;
 	float:left;
-	text-align:center;
+	text-align:left;
 	.linear-gradient(left bottom, right top, #fff, #000);
 }
 
@@ -63,7 +63,7 @@ div.radial {
 	height:100%;
 	width:50%;
 	float:left;
-	text-align:center;
+	text-align:left;
 	.radial-gradient(50%, 50%, circle, cover, #ffffff, 0%, #000000, 100%);
 }
 
@@ -71,8 +71,8 @@ div.radial-3color {
 	height:100%;
 	width:50%;
 	float:left;
-	text-align:center;
-	.radial-gradient-3color(#f00 0%, #0f0 50%, #00f 100%);
+	text-align:left;
+	.radial-gradient-3color(#fff 10%, #999 30%, #000 90%);
 	
 }
 
