--- a/demo/animation/rotate/main.less
+++ b/demo/animation/rotate/main.less
@@ -67,12 +67,19 @@ pre {
 	background: url('../../_assets/img/spinner.gif');
 	width:32px;
 	height:32px;
-	.rotate(10s, infinite);
+	.rotate(2s);
 }
 
 .tater2 {
 	background: url('../../_assets/img/splitterbot.png');
 	width:350px;
 	height:350px;
-	.rotate(20s, infinite);
+	.rotate(20s);
+}
+
+.tater3 {
+	background: url('../../_assets/img/splitterbot.png');
+	width:350px;
+	height:350px;
+	.rotate(2s, 2);
 }
