--- a/demo/circle-transition/main.less
+++ b/demo/circle-transition/main.less
@@ -65,10 +65,11 @@ h6 {
 	background-color:#C00;
 	overflow:hidden;
 	color:#fff;
-	.transition(all, .5s, ease);
+	.transition(.5s, ease);
 }
 
 .circle:hover .overlay {
 	margin-top:50%;
 	background-color:rgba(255, 0, 0, .5);
+	.transition(.5s, ease);
 }
