changing to absolute path for images

--- a/demo/animation/rotate/main.less
+++ b/demo/animation/rotate/main.less
@@ -64,21 +64,21 @@ pre {
 }
 
 .rotater {
-	background: url('../../_assets/img/spinner.gif');
+	background: url(https://raw.github.com/commons/less/master/demo/_assets/img/spinner.gif);
 	width:32px;
 	height:32px;
 	.rotate(2s);
 }
 
 .tater2 {
-	background: url('../../_assets/img/splitterbot.png');
+	background: url(https://raw.github.com/commons/less/master/demo/_assets/img/splitterbot.png);
 	width:350px;
 	height:350px;
 	.rotate(20s);
 }
 
 .tater3 {
-	background: url('../../_assets/img/splitterbot.png');
+	background: url(https://raw.github.com/commons/less/master/demo/_assets/img/splitterbot.png);
 	width:350px;
 	height:350px;
 	.rotate(2s, 2);
