--- a/demo/circle-transition/main.less
+++ b/demo/circle-transition/main.less
@@ -71,5 +71,5 @@ h6 {
 .circle:hover .overlay {
 	margin-top:50%;
 	background-color:rgba(255, 0, 0, .5);
-	.transition(.5s, ease);
+	/* .transition(.5s, ease); */
 }
