editing demo files

--- a/demo/gradients/main.less
+++ b/demo/gradients/main.less
@@ -56,7 +56,9 @@ div.linear {
 	width:50%;
 	float:left;
 	text-align:left;
-	.linear-gradient(left bottom, right top, #fff, #000);
+	.linear-gradient(left bottom, left top, #fff, #000);
+	/* .linear-gradient(); */
+	
 }
 
 div.radial {
