--- a/mixins/ribbons/ribbon-tr.less
+++ b/mixins/ribbons/ribbon-tr.less
@@ -1,6 +1,6 @@
 /* usage: .ribbon-tr(@margin:auto, @padding:auto, @font:1em, @bgcolor:#f00, @color:#fff, @hover:#ccc, @hoverfont:#fff); */
 
-.ribbon-tr(@margin:auto, @padding:auto, @font:1em, @bgcolor:#f00, @color:#fff, @hover:#ccc, @hoverfont:#fff) {
+.ribbon-tr(@margin:auto, @padding:auto, @font:1em, @bgcolor:#f00, @color:#fff, @hover:#c00, @hoverfont:#fff) {
  	position:absolute;
 	right:0;
 	top:0;
