added border-radius syntax

--- a/mixins/buttons/button.less
+++ b/mixins/buttons/button.less
@@ -8,6 +8,7 @@
 	padding:@padding; 
 	color:@color; 
 	text-decoration:none;
+	border-radius:@radius;
 	-moz-border-radius:@radius; 
 	-webkit-border-radius:@radius;
 	position: relative;
