--- a/demo/gradients/main.less
+++ b/demo/gradients/main.less
@@ -56,9 +56,7 @@ div.linear {
 	width:50%;
 	float:left;
 	text-align:left;
-	.linear-gradient(left bottom, left top, #fff, #000);
-	/* .linear-gradient(); */
-	
+	.linear-gradient(left bottom, left top, #930, #cf0); 
 }
 
 div.radial {
@@ -66,7 +64,7 @@ div.radial {
 	width:50%;
 	float:left;
 	text-align:left;
-	.radial-gradient(50%, 50%, circle, cover, #ffffff, 0%, #000000, 100%);
+	.radial-gradient(50%, 50%, circle, cover, #00f, 30%, #fff, 100%);
 }
 
 div.radial-3color {
@@ -74,7 +72,7 @@ div.radial-3color {
 	width:50%;
 	float:left;
 	text-align:left;
-	.radial-gradient-3color(#fff 10%, #999 30%, #000 90%);
+	.radial-gradient-3color(#9ff 10%, #0f0 30%, #ff0 90%);
 	
 }
 
