--- a/demo/circle-transition/main.less
+++ b/demo/circle-transition/main.less
@@ -49,7 +49,6 @@ h6 {
 	margin:10px;
 	/* mixins */
 	.circle(160px, black, 10px solid #ccc);
-	.transition(1s, ease);
 }
 
 .circle:hover {
@@ -65,11 +64,10 @@ h6 {
 	background-color:#C00;
 	overflow:hidden;
 	color:#fff;
-	.transition(.5s, ease);
+	.transition(all, .5s, ease, 0);
 }
 
 .circle:hover .overlay {
 	margin-top:50%;
 	background-color:rgba(255, 0, 0, .5);
-	.transition(.5s, ease);
 }
