adding more colors

--- a/variables.less
+++ b/variables.less
@@ -1,4 +1,18 @@
 /* variables */
+@white: #fff;
+@black: #000;
+@gray-darkest: #333;
+@gray-dark: #666;
+@gray-med: #999;
+@gray-light: #ccc;
+@gray-lightest: #f1f1f1;
+@red: #ff0000;
+@green: #00ff00;
+@blue: #0000ff;
+
+@linkColor:	#09c;
+@linkColorHover: darken(@linkColor, 15%);
+
 @set1-font-color:#333;
 @set1-font-highlight:#ccc;
 @set1-font-link:#447766;
@@ -14,7 +28,6 @@
 @padding-max:20px;
 @padding-med:10px;
 @padding-min:5px;
-
 @margin-max:20px;
 @margin-med:10px;
 @margin-min:5px;
